--- a/homeworks/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/homeworks/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,3 +1,7 @@
+input:focus{
+    outline: none;
+    border: #61dafb solid 4px;
+}
 .superInput {
     background:violet;
     border: 3px solid salmon;
