--- a/homeworks/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/homeworks/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,7 +1,20 @@
 .default {
 
 }
+button:hover{
+    background-color: whitesmoke;
+    border: #282c34 solid 5px;
+}
+button:disabled {
+    background-color: white;
+    color: aqua;
+}
 
+button:disabled:hover{
+    background-color: white;
+    color: aqua;
+    border: none;
+}
 .red {
     background: red;
 }
