--- a/homeworks/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
+++ b/homeworks/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
@@ -1,5 +1,8 @@
 .checkbox {
-
+    appearance: none;
+    background-color: greenyellow;
+    width: 10px;
+    height: 10px;
 }
 
 .spanClassName {
